# Image-Editor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  bmp.cpp  bmp.hpp
tests/: CMakeLists.txt  test_project.cpp
